[tool.poetry]
name = "fastmail"
version = "0.1.0"
description = "API Requests for searching and sorting email services"
authors = ["gtGrover <gtgrover@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
